# OGLR

./: Camera.cxx  Camera.h  DataDirHelper.h  FpsCamera.h  LICENSE  Mesh.cxx  Mesh.h  README.md  Shader.cxx  Shader.h  config.h.in  main.cxx  meson.build
data/shaders/: 02_simpleTexCoord.vert  04_ambientLighting.frag  04_color.frag  06_directionalLight.frag  06_invertSpecularMap.frag  06_lightMap.frag  06_multipleLights.frag  06_normalTexCoordWorld.vert  06_pointLight.frag  06_pointLightWorld.frag  06_spotLight.frag
glad/include/glad/: glad.h
shaders/: 02_transform.vert  03_transformCoordinates.vert  04_diffuseLighting.frag  04_materialLighting.frag  04_materialLightingIntensity.frag  04_normalCorrected.vert  04_specularLighting.frag  05_gouraudShading.vert  06_directionalLight.frag  06_e.vert  06_emissionMap.frag  06_emissionMapAnimated.frag  06_multipleLights.frag  06_specularMap.frag  06_spotLight.frag  06_spotLightSmooth.frag  coloredTexture.frag  mixTextures.frag  mixTexturesConfigurable.frag  normal.vert  normalCorrected.vert  offset.vert  position.vert  simple.vert  specularLighting.frag  texture.frag  transformCoordinates.vert  upsideDown.vert  white.frag
src/: Camera.cxx  Camera.h  DataDirHelper.cxx  DirectoryHelper.cxx  DirectoryHelper.h  FpsCamera.cxx  FpsCamera.h  Mesh.cxx  Mesh.h  Model.cxx  Model.h  Renderer.cxx  Renderer.h  Shader.cxx  Shader.h  main.cxx  meson.build
src/lib/glad/src/: glad.c
